# text2chem

./: .gitignore  README.md  example.py  pyproject.toml  setup.py
.github/workflows/: ci-build-unstable.yml
tests/: chemical_names.json  formulas.json
text2chem/: chemical_data.py  chemical_structure.py  data_structures.py  parser_pipeline.py  regex_parser.py  utils.py
text2chem/core/: default_processing.py  formula_parser.py
text2chem/postprocessing_tools/: element_variables_processing.py  stoichiometric_variables_processing.py  substitute_additives.py
text2chem/preprocessing_tools/: mixture_processing.py  phase_processing.py  preprocessing_abc.py  pubchem_preprocessing.py
workflows/: ci-build-unstable.yml
